[package]
name = "bftt_server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10"
actix-web = "3"
actix-web-actors = "3"
env_logger = "0.8"
futures = "0.3.1"
bytes = "0.5.3"
dotenv = "0.15"
actix-cors = "0.5"
actix-session = "0.4"
actix-redis = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
actix-service = "1"
actix-http = "2"
rand = "0.7.3"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }

[dev-dependencies]
actix-rt = "1"
